Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
Few tests - dmesg-warm - *ERROR* timed out waiting for GSC init to load HuC
<7> [180.956436] i915 0000:03:00.0: [drm:intel_hdmi_detect [i915]] [CONNECTOR:284:HDMI-A-3]
<7> [180.956741] i915 0000:03:00.0: [drm:do_gmbus_xfer [i915]] GMBUS [i915 gmbus dpd] NAK for addr: 0050 w(1)
<7> [180.956836] i915 0000:03:00.0: [drm:do_gmbus_xfer [i915]] GMBUS [i915 gmbus dpd] NAK on first message, retry
<7> [180.957107] i915 0000:03:00.0: [drm:do_gmbus_xfer [i915]] GMBUS [i915 gmbus dpd] NAK for addr: 0050 w(1)
<7> [180.957209] [drm:drm_do_probe_ddc_edid] drm: skipping non-existent adapter i915 gmbus dpd
<7> [180.957212] i915 0000:03:00.0: [drm:intel_hdmi_set_edid [i915]] HDMI GMBUS EDID read failed, retry using GPIO bit-banging
<7> [180.957306] i915 0000:03:00.0: [drm:intel_gmbus_force_bit [i915]] enabling bit-banging on i915 gmbus dpd. force bit now 1
<7> [180.959346] [drm:drm_do_probe_ddc_edid] drm: skipping non-existent adapter i915 gmbus dpd
<7> [180.959350] i915 0000:03:00.0: [drm:intel_gmbus_force_bit [i915]] disabling bit-banging on i915 gmbus dpd. force bit now 0
<7> [180.959632] i915 0000:03:00.0: [drm:do_gmbus_xfer [i915]] GMBUS [i915 gmbus dpd] NAK for addr: 0040 w(1)
<7> [180.959728] i915 0000:03:00.0: [drm:do_gmbus_xfer [i915]] GMBUS [i915 gmbus dpd] NAK on first message, retry
<7> [180.960004] i915 0000:03:00.0: [drm:do_gmbus_xfer [i915]] GMBUS [i915 gmbus dpd] NAK for addr: 0040 w(1)
<7> [180.960100] i915 0000:03:00.0: [drm:drm_dp_dual_mode_detect [drm_display_helper]] DP dual mode HDMI ID: (err -6)
<7> [180.960116] i915 0000:03:00.0: [drm:check_connector_changed [drm_kms_helper]] [CONNECTOR:284:HDMI-A-3] Same epoch counter 1
<6> [181.054915] ata2: SATA link down (SStatus 4 SControl 300)
<6> [181.062025] ata4: SATA link down (SStatus 4 SControl 300)
<6> [181.062083] ata3: SATA link down (SStatus 4 SControl 300)
<3> [181.328177] atkbd serio0: Failed to enable keyboard on isa0060/serio0
<3> [182.807229] i915 0000:03:00.0: [drm] *ERROR* timed out waiting for GSC init to load HuC
<6> [183.650736] OOM killer enabled.
<6> [183.650738] Restarting tasks ...
<6> [183.656586] i915 0000:03:00.0: [drm] HuC authenticated
<6> [183.656599] mei_pxp i915.mei-gsc.768-fbf6fcf1-96cf-4e2e-a6a6-1bab8cbe36b1: bound 0000:03:00.0 (ops i915_pxp_tee_component_ops [i915])
<4> [183.659370] done.
<5> [183.659383] random: crng reseeded on system resumption
<6> [183.662974] PM: suspend exit
<7> [183.665473] i915 0000:03:00.0: [drm:drm_mode_rmfb_work_fn] Removing [FB:288] from all active usage due to RMFB ioctl
<7> [183.665516] i915 0000:03:00.0: [drm:atomic_remove_fb] Disabling [PLANE:31:plane 1A] because [FB:288] is removed
<7> [183.665578] i915 0000:03:00.0: [drm:skl_compute_wm [i915]] [PLANE:31:plane 1A] ddb ( 0 - 1884) -> ( 0 - 0), size 1884 -> 0
<7> [183.665695] i915 0000:03:00.0: [drm:skl_compute_wm [i915]] [PLANE:31:plane 1A] level *wm0,*wm1,*wm2,*wm3,*wm4,*wm5,*wm6,*wm7,*twm, swm, stwm -> wm0, wm1, wm2, wm3, wm4, wm5, wm6, wm7, twm, swm, stwm
<7> [183.665786] i915 0000:03:00.0: [drm:skl_compute_wm [i915]] [PLANE:31:plane 1A] lines 1, 5, 8, 9, 17, 21, 33, 49, 0, 0, 0 -> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
<7> [183.665874] i915 0000:03:00.0: [drm:skl_compute_wm [i915]] [PLANE:31:plane 1A] blocks 31, 156, 249, 280, 528, 652,1024,1520, 45, 0, 0 -> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
<7> [183.665963] i915 0000:03:00.0: [drm:skl_compute_wm [i915]] [PLANE:31:plane 1A] min_ddb 36, 173, 275, 309, 582, 719,1128,1673, 46, 0, 0 -> 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
<7> [183.666057] i915 0000:03:00.0: [drm:intel_bw_atomic_check [i915]] [CRTC:80:pipe A] data rate 0 num active planes 0
<7> [183.666163] i915 0000:03:00.0: [drm:intel_bw_atomic_check [i915]] QGV point 0: max bw 50000 required 0
<7> [183.674425] i915 0000:03:00.0: [drm:__intel_fbc_disable [i915]] Disabling FBC on [PLANE:31:plane 1A]
<6> [183.692020] [IGT] kms_flip: starting dynamic subtest B-DP4
<7> [183.692622] i915 0000:03:00.0: [drm:drm_mode_addfb2] [FB:287]
<7> [183.692684] i915 0000:03:00.0: [drm:drm_mode_addfb2] [FB:288]
<7> [183.693006] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.693183] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.693309] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.693551] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.730367] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.730504] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.730610] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.730720] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.736360] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.736466] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.736561] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.736947] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.771668] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.771783] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.771879] i915 0000:03:00.0: [drm:i915_gem_context_create_ioctl [i915]] HW context 1 created
<7> [183.771992] [drm:eb_lookup_vmas [i915]] EINVAL at eb_validate_vma:504
<7> [183.797953] [drm:drm_mode_setcrtc] [CRTC:80:pipe A]